--- a/CalcIt/CalcIt.Protocol/CalcIt.Protocol.csproj
+++ b/CalcIt/CalcIt.Protocol/CalcIt.Protocol.csproj
@@ -47,10 +47,9 @@
     <Compile Include="CalcItMessage.cs" />
     <Compile Include="Client\EndGame.cs" />
     <Compile Include="IMessageControl.cs" />
-    <Compile Include="Session\IpConnectionEndpoint.cs" />
-    <Compile Include="Session\PipeConnectionEndpoint.cs" />
-    <Compile Include="Session\Session.cs" />
-    <Compile Include="Session\ConnectionEndpoint.cs" />
+    <Compile Include="Endpoint\IpConnectionEndpoint.cs" />
+    <Compile Include="Endpoint\PipeConnectionEndpoint.cs" />
+    <Compile Include="Endpoint\ConnectionEndpoint.cs" />
     <Compile Include="Server\Heartbeat.cs" />
     <Compile Include="Data\HighScoreItem.cs" />
     <Compile Include="Client\HighscoreRequest.cs" />
