--- a/CalcIt/CalcIt.Server/CalcIt.Server.csproj
+++ b/CalcIt/CalcIt.Server/CalcIt.Server.csproj
@@ -75,7 +75,12 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="ServerConfiguration.xml" />
+    <Content Include="ServerConfigurationB.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="ServerConfiguration.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
