--- a/CalcIt/CalcIt.GameClient/CalcIt.GameClient.csproj
+++ b/CalcIt/CalcIt.GameClient/CalcIt.GameClient.csproj
@@ -88,6 +88,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Converter\BooleanToVisibilityConverter.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
     <Compile Include="View\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
