--- a/CalcIt/CalcIt.GameClient/CalcIt.GameClient.csproj
+++ b/CalcIt/CalcIt.GameClient/CalcIt.GameClient.csproj
@@ -98,6 +98,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
+      <ExcludeFromStyleCop>True</ExcludeFromStyleCop>
     </Compile>
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
